--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/flask
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask
 
+
+### Own definition of files to ignore ###
+blog.db
+
 ### Flask ###
 instance/*
 !instance/.gitignore
